[package]
name = "owned-window-handle"
version = "0.1.0"
edition = "2021"
authors = ["John Nunley <dev@notgull.net>"]
license = "MIT OR Apache-2.0 OR Zlib"
readme = "README.md"
rust-version = "1.64"
keywords = ["windowing"]

[dependencies]
raw-window-handle = { git = "https://github.com/rust-windowing/raw-window-handle", branch = "notgull/no-wb", default-features = false }

[target.'cfg(target_family = "wasm")'.dependencies]
wasm-bindgen = { version = "0.2.105", default-features = false }
web-sys = { version = "0.3.0", default-features = false, features = [
    "Document",
    "Window",
    "HtmlCanvasElement",
    "OffscreenCanvas"
] }

[features]
default = ["std"]
std = []
