[package]
name = "owned-window-handle"
version = "0.1.0"
edition = "2021"
authors = ["John Nunley <dev@notgull.net>"]
license = "MIT OR Apache-2.0 OR Zlib"
readme = "README.md"
rust-version = "1.64"
keywords = ["windowing"]

[dependencies]
raw-window-handle = { version = "0.6.2", default-features = false }

[target.'cfg(all(unix, not(any(target_os = "redox", target_family = "wasm", target_os = "android", target_vendor = "apple"))))'.dependencies]
wayland-backend = { version = "0.3.0", default-features = false, features = ["client_system"], optional = true }
wayland-client = { version = "0.31.2", default-features = false, optional = true }
wayland-sys = { version = "0.31.1", default-features = false, optional = true, features = ["client"] }

[target.'cfg(target_vendor = "apple")'.dependencies]
objc2 = { version = "0.5.2", default-features = false, features = ["std"] }

[target.'cfg(target_os = "android")'.dependencies]
ndk-sys = { version = "0.6.0", default-features = false }

[target.'cfg(target_family = "wasm")'.dependencies]
wasm-bindgen = { version = "0.2.105", default-features = false }
web-sys = { version = "0.3.0", default-features = false, features = [
    "Document",
    "Window",
    "HtmlCanvasElement",
    "OffscreenCanvas"
] }

[features]
default = ["std", "wayland"]
std = []
wayland = ["dep:wayland-backend", "dep:wayland-client", "dep:wayland-sys"]

[dev-dependencies]
winit = { version = "0.30.12", features = ["android-native-activity"] }

[patches.crates-io]
raw-window-handle = { git = "https://github.com/rust-windowing/raw-window-handle", branch = "notgull/no-wb", default-features = false }
